@@ -13,6 +13,9 @@ Corrections:
 	SOCKET-LISTEN:1:1:'"/tmp/sock"'
 	Test: DALAN_NO_SIGSEGV
 
+	The retry option with some address types (TCP) did not close() the
+	sockets after failed attempts, resulting in an FD leak.
+
 Coding:
 	New Environment variable SOCAT_TRANSFER_WAIT that Socat sleep before
 	starting the data transfer loop. Useful, e.g., to accumulate multiple
